# spl-manager

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  README.md  pyproject.toml  testing.ipynb  testing.py  tox.ini
.devcontainer/: codespace.Dockerfile  devcontainer.json  gitpod.Dockerfile  install.sh
.devcontainer/ansible/playbooks/: setup.yml
.devcontainer/ansible/roles/: requirements.yml
.github/: dependabot.yml
.github/workflows/: publish.yml  python-package.yml  test.yml
config/: settings.yaml  template.secrets.yaml
docs/: index.md
notebooks/: all_objects.py  app_diffs.py  props_nd_transforms.py  sso_config.py  testing.ipynb
spl/: __init__.py  __main__.py  _diff_converter.py  apps_manager.py  connection_adapter.py  diff_converter.py  docker_manager.py  feed_manager.py  objects.py  samples_manager.py  schemata.py  sync_manager.py
spl_manager/: __init__.py  __main__.py  _diff_converter.py  apps_manager.py  connection_adapter.py  docker_manager.py  objects.py  samples_manager.py  schemata.py  sync_manager.py
